// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Combine demo -- combine 1`] = `
.c21 {
  position: relative;
}

.c21 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.c21 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 12px;
}

.c21 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.c21 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.c10 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 16px;
  height: 16px;
}

.c26 {
  vertical-align: baseline;
}

.c24 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c24:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c9 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.c9 > * {
  font-size: 12px;
}

.c9 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 16px;
  height: 16px;
  border: 1px solid #0a1633;
  border-radius: 8px;
  vertical-align: middle;
}

.c9 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c9 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c9:hover .uc-fe-radio-icon-wrap,
.c9.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.c9.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.c9.uc-fe-radio-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c9.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c9.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.c9.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: unset;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .sc-bxivhb {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .sc-bxivhb:last-child {
  margin-right: 0;
}

.c7 .c30 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c30:last-child {
  margin-right: 0;
}

.c7 .c31+.c31 {
  margin-left: -1px;
}

.c7 .c29 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c29:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c29:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c28 {
  display: table;
  width: 100%;
}

.c27 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c27 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c27 input,
.c27 input:hover,
.c27 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c27:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c27 input {
  line-height: 26px;
  height: 26px;
}

.c27 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c27 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c27 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c27 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c23 {
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.c25 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c22 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c13 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c15 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c18 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c11 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c11:hover {
  border-color: #3357df;
}

.c11:hover .c17 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c11 .c17 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c11 .c19 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c11 .c12 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c11 .c14,
.c11 .c16 {
  line-height: 16px;
}

.c11 .c14 {
  padding-right: 20px;
}

.c11 .c16 {
  padding-left: 20px;
}

.c11 .c14 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              sm
            </span>
          </span>
          <span
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              md
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              lg
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c11"
        >
          <div
            class="c12 c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c15"
            >
              OFF
            </span>
            <span
              class="c17 c18"
            >
              <span
                class="c19 c20"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        spacing
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <span
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              smart
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              compact
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              sm
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              md
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              lg
            </span>
          </span>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine c21"
      spacing="md"
    >
      <div
        class="uc-fe-combine-controller c22"
      >
        <div>
          <button
            class="c23 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c24"
            type="button"
          >
            <div>
              请选择
            </div>
            <i
              class="uc-fe-icon icon__down c25 c26"
            />
          </button>
        </div>
      </div>
      <span
        class="uc-fe-combine-controller uc-fe-input c27"
      >
        <span
          class="c28"
        >
          <input />
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Combine demo -- demo 1`] = `
.c0 {
  position: relative;
}

.c0 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.c0 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 12px;
}

.c0 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.c0 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.c1 {
  position: relative;
}

.c1 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.c1 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: -1px;
}

.c1 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.c1 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.c6 {
  vertical-align: baseline;
}

.c4 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c4:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c9 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c9:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c10 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c10:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c10.c10 {
  border-color: #d9d9d9;
  background: #f7f7f7;
  color: #cccccc;
  cursor: not-allowed;
  border-width: 1px;
  border-style: solid;
  box-shadow: none;
}

.c12 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
}

.c11 {
  padding-right: 8px;
}

.c13 {
  cursor: pointer;
}

.c8 {
  display: table;
  width: 100%;
}

.c7 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c7 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c7 input,
.c7 input:hover,
.c7 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c7:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c7 input {
  line-height: 26px;
  height: 26px;
}

.c7 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c3 {
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.c5 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

<div>
  <h3>
    组合
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine c0"
      spacing="md"
    >
      <div
        class="uc-fe-combine-controller uc-fe-combine c1"
        spacing="compact"
      >
        <div
          class="uc-fe-combine-controller c2"
        >
          <div>
            <button
              class="c3 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c4"
              type="button"
            >
              <div>
                请选择
              </div>
              <i
                class="uc-fe-icon icon__down c5 c6"
              />
            </button>
          </div>
        </div>
        <span
          class="uc-fe-combine-controller uc-fe-input c7"
        >
          <span
            class="c8"
          >
            <input />
          </span>
        </span>
      </div>
      <button
        class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c9"
        type="button"
      >
        按钮
      </button>
    </div>
  </div>
  <h3>
    按钮组
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine c0"
      spacing="md"
    >
      <button
        class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c9"
        type="button"
      >
        按钮组展示
      </button>
      <button
        class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c4"
        type="button"
      >
        按钮组展示
      </button>
      <button
        class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c4"
        type="button"
      >
        按钮组展示
      </button>
      <button
        class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-button-disabled c10"
        disabled=""
        type="button"
      >
        按钮组展示
      </button>
    </div>
  </div>
  <h3>
    工具栏
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine c0"
      spacing="md"
    >
      <span
        class="uc-fe-combine-controller uc-fe-input c7"
      >
        <span
          class="c8"
        >
          <input />
          <span
            class="c11 c12"
          >
            <i
              class="uc-fe-icon icon__search c13 c6"
            />
          </span>
        </span>
      </span>
      <button
        class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c4"
        type="button"
      >
        <i
          class="uc-fe-icon icon__repeat uc-fe-button-icon c6"
        />
      </button>
      <button
        class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c4"
        type="button"
      >
        <i
          class="uc-fe-icon icon__cog uc-fe-button-icon c6"
        />
      </button>
      <button
        class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c4"
        type="button"
      >
        <i
          class="uc-fe-icon icon__cloud-download uc-fe-button-icon c6"
        />
      </button>
      <button
        class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c4"
        type="button"
      >
        按钮
      </button>
    </div>
  </div>
</div>
`;

exports[`Combine demo -- sharedProps 1`] = `
.c8 {
  position: relative;
}

.c8 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.c8 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 12px;
}

.c8 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.c8 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.c0 {
  position: relative;
}

.c0 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.c0 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 8px;
}

.c0 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.c0 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.c5 {
  vertical-align: baseline;
}

.c9 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c9:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c3 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c3:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c7 {
  display: table;
  width: 100%;
}

.c10 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c10 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c10 input,
.c10 input:hover,
.c10 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c10:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c10 input {
  line-height: 26px;
  height: 26px;
}

.c10 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c10 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c10 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c10 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c6 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 24px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c6 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c6 input,
.c6 input:hover,
.c6 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c6:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c6 input {
  line-height: 22px;
  height: 22px;
}

.c6 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c6 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c6 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c6 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c2 {
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.c4 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine c0"
      spacing="sm"
    >
      <div
        class="uc-fe-combine-controller c1"
      >
        <div>
          <button
            class="c2 uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border c3"
            type="button"
          >
            <div>
              请选择
            </div>
            <i
              class="uc-fe-icon icon__down c4 c5"
            />
          </button>
        </div>
      </div>
      <span
        class="uc-fe-combine-controller uc-fe-input c6"
      >
        <span
          class="c7"
        >
          <input />
        </span>
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine c8"
      spacing="md"
    >
      <div
        class="uc-fe-combine-controller test_cls c1"
      >
        <div>
          <button
            class="c2 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c9"
            type="button"
          >
            <div>
              请选择
            </div>
            <i
              class="uc-fe-icon icon__down c4 c5"
            />
          </button>
        </div>
      </div>
      <span
        class="uc-fe-combine-controller test_cls uc-fe-input c10"
      >
        <span
          class="c7"
        >
          <input />
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Combine demo -- spacing 1`] = `
.c0 {
  position: relative;
}

.c0 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.c0 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 12px;
}

.c0 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.c0 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.c9 {
  position: relative;
}

.c9 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.c9 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: -1px;
}

.c9 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.c9 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.c4 {
  position: relative;
}

.c4 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.c4 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 8px;
}

.c4 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.c4 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.c15 {
  position: relative;
}

.c15 > .uc-fe-combine-controller {
  vertical-align: middle;
  display: inline-block;
}

.c15 > .uc-fe-combine-controller+.uc-fe-combine-controller {
  margin-left: 40px;
}

.c15 > .uc-fe-combine-controller+.uc-fe-combine-controller:focus {
  z-index: 2;
}

.c15 > .uc-fe-combine-controller+.uc-fe-combine-controller:hover {
  z-index: 3;
}

.c14 {
  vertical-align: baseline;
}

.c12 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #ffffff;
  border: none;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c12:hover {
  color: #3860f4;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c3 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c3:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c6 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  padding: 0 8px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c6:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c8 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 32px;
  padding: 0 12px;
  color: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c8:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.c2 {
  display: table;
  width: 100%;
}

.c1 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c1 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c1 input,
.c1 input:hover,
.c1 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c1:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c1 input {
  line-height: 26px;
  height: 26px;
}

.c1 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c1 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c1 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c1 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c5 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 24px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c5 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c5 input,
.c5 input:hover,
.c5 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c5:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c5 input {
  line-height: 22px;
  height: 22px;
}

.c5 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c5 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c5 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c5 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 32px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c7 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c7 input,
.c7 input:hover,
.c7 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c7:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c7 input {
  line-height: 30px;
  height: 30px;
}

.c7 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c11 {
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.c13 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c10 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

<div>
  <div>
    <h3>
      spacing: smart
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="uc-fe-combine c0"
        spacing="md"
      >
        <span
          class="uc-fe-combine-controller uc-fe-input c1"
        >
          <span
            class="c2"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c3"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <div>
    <h3>
      spacing: smart - sm
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="uc-fe-combine c4"
        spacing="sm"
      >
        <span
          class="uc-fe-combine-controller uc-fe-input c5"
        >
          <span
            class="c2"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-primary c6"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <div>
    <h3>
      spacing: smart - md
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="uc-fe-combine c0"
        spacing="md"
      >
        <span
          class="uc-fe-combine-controller uc-fe-input c1"
        >
          <span
            class="c2"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c3"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <div>
    <h3>
      spacing: smart - lg
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="uc-fe-combine c0"
        spacing="lg"
      >
        <span
          class="uc-fe-combine-controller uc-fe-input c7"
        >
          <span
            class="c2"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-primary c8"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <div>
    <h3>
      spacing: sm
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="uc-fe-combine c4"
        spacing="sm"
      >
        <span
          class="uc-fe-combine-controller uc-fe-input c1"
        >
          <span
            class="c2"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c3"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <div>
    <h3>
      spacing: md
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="uc-fe-combine c0"
        spacing="md"
      >
        <span
          class="uc-fe-combine-controller uc-fe-input c1"
        >
          <span
            class="c2"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c3"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <div>
    <h3>
      spacing: lg
    </h3>
    <div
      class="demo-wrap"
    >
      <div
        class="uc-fe-combine c0"
        spacing="lg"
      >
        <span
          class="uc-fe-combine-controller uc-fe-input c1"
        >
          <span
            class="c2"
          >
            <input />
          </span>
        </span>
        <button
          class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c3"
          type="button"
        >
          按钮
        </button>
      </div>
    </div>
  </div>
  <h3>
    spacing: compact
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine c9"
      spacing="compact"
    >
      <div
        class="uc-fe-combine-controller c10"
      >
        <div>
          <button
            class="c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c12"
            type="button"
          >
            <div>
              请选择
            </div>
            <i
              class="uc-fe-icon icon__down c13 c14"
            />
          </button>
        </div>
      </div>
      <span
        class="uc-fe-combine-controller uc-fe-input c1"
      >
        <span
          class="c2"
        >
          <input />
        </span>
      </span>
    </div>
  </div>
  <h3>
    spacing: custom
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-combine c15"
      spacing="40px"
    >
      <span
        class="uc-fe-combine-controller uc-fe-input c1"
      >
        <span
          class="c2"
        >
          <input />
        </span>
      </span>
      <button
        class="uc-fe-combine-controller uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c3"
        type="button"
      >
        按钮
      </button>
    </div>
  </div>
</div>
`;
